--- a/package.json
+++ b/package.json
@@ -1,33 +1,31 @@
 {
-  "name": "investing-now",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0",
-    "lucide-react": "^0.330.0",
-    "recharts": "^2.12.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1",
-    "@supabase/supabase-js": "^2.39.3",
-    "class-variance-authority": "^0.7.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
-  }
+    "name": "investing-now",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "next": "14.2.21",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "recharts": "^2.12.7",
+        "lucide-react": "^0.453.0",
+        "clsx": "^2.1.1",
+        "tailwind-merge": "^2.5.4"
+    },
+    "devDependencies": {
+        "typescript": "^5.6.3",
+        "@types/node": "^20.17.6",
+        "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.3.1",
+        "autoprefixer": "^10.4.20",
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.15",
+        "eslint": "^8.57.1",
+        "eslint-config-next": "14.2.21"
+    }
 }
